@@ -3,6 +3,8 @@
 	* about.cc (about_dialog): Set the window title.
 	(about_dialog): Position the window to center.
 	(populate): Set the default to the OK button.
+	(about_dialog): Construct the title string on the fly.
+	(_): Defined for later gettext migration.
 
 	* about.cc (show): Remove the argument and use the parent_widget
 	member.
